--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 body {
-  background-image: url(/images/back.jpg);
+  background-image: url(./images/back.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
