--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700&display=swap");
 
 body {
   font-family: "Rubik", sans-serif;
 }
 
 .city {
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
 }
 
 :root {
@@ -25,7 +25,7 @@ body {
 }
 
 body {
-  background-image: url(./images/back.jpg);
+  background-image: url(images/back.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
