--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,9 @@ nav {
   .justify-content-xs-between {
     justify-content: space-between !important;
   }
+  .fs-md {
+    font-size: 2rem;
+  }
 }
 
 @media screen and (min-width: 576px) and (max-width: 600px) {
@@ -144,6 +147,9 @@ nav {
   }
   .rounded-xs-0 {
     border-radius: 0 !important;
+  }
+  .fs-md {
+    font-size: 2rem;
   }
 }
 
